# console_pomodoro

./: .gitignore  Makefile  README.md  logs  pyproject.toml
logging/: logs
pomodoro/: __init__.py  logic.py  parser_args.py
pomodoro/scripts/: timer_run.py  timer_work.py
