[tool.poetry]
name = "console_pomodoro"
version = "0.1.0"
description = ""
authors = ["timosii <holdcarter@holdcarter.ru>"]
packages = [{include="pomodoro"}]

[tool.poetry.scripts]
pomodoro = "pomodoro.scripts.timer_run:main"

[tool.poetry.dependencies]
python = "^3.10"
playsound = "^1.3.0"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
