[tool.poetry]
name = "console_pomodoro"
version = "0.1.0"
description = ""
authors = ["timosii <holdcarter@holdcarter.ru>"]
packages = [{include="pomodoro"}]

[tool.poetry.scripts]
work = "pomodoro.scripts.timer_work:main"

[tool.poetry.dependencies]
python = "^3.10"
playsound = "^1.3.0"
flake8 = "^6.0.0"
rich = "^13.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
